[package]
name = "popover-help"
version = "0.1.0"
authors = ["Evan Stoll <evanjsx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdk-pixbuf = "0.8.0"
gdk = "0.12.1"
anyhow = "1.0.31"
glib = "0.9.3"


[dependencies.gtk]
version = "0.8.1"
features = ["v3_22"]

[dependencies.gio]
version = "0.8.1"
features = ["v2_44"]

[profile.release]
opt-level = "z"
lto = "thin"
